--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Deep Space</title>
-	<link href="styles/style.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+    <title>Markus Fuchs - Public Homepage</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet" type="text/css">
   </head>
   <body>
-	<h1>Deep Space</h1>
-    <img src="images/sky-lights-space-dark.jpg" width="600" height="400" alt="A picture of a galaxy">
-	<p>The universe is endless ...</p>
-	<ul> 
-		<li>deep</li>
-		<li>black</li>
-		<li>cold</li>
-	</ul>
-	<p>Wikipedia <a href="https://en.wikipedia.org/wiki/Universe">article</a> about the universe</p>
-	<script src="scripts/main.js"></script>
+    <div class="content">
+      <p>
+        <a href="https://github.com/mklntf">GitHub</a> |
+        <a href="https://twitter.com/mklntf">Twitter</a>
+      </p>
+    </div>
   </body>
 </html>
