--- a/src/whois.html
+++ b/src/whois.html
@@ -2,16 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Markus Fuchs - Public Homepage</title>
+    <title>Markus Fuchs - /whois</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="content">
       <p>
-        <a href="/src/whois.html">/whois</a> |
-        <a href="https://github.com/mklntf">GitHub</a> |
-        <a href="https://twitter.com/mklntf">Twitter</a>
+        nice guy
       </p>
     </div>
   </body>
