--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="content">
       <p>
-        <a href="/src/whois.html">/whois</a> |
+        <a href="/src/whois.html">&#47;whois</a> |
         <a href="https://github.com/mklntf">GitHub</a> |
         <a href="https://twitter.com/mklntf">Twitter</a>
       </p>
