--- a/src/whois.html
+++ b/src/whois.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Markus Fuchs - /whois</title>
+    <title>Markus Fuchs - &#47;whois</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet" type="text/css">
   </head>
