--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Markus Fuchs - Public Homepage</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Markus Fuchs - Home</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="content">
-      <p>
-        <a href="/src/whois.html">&#47;whois</a> |
-        <a href="https://github.com/mklntf">GitHub</a> |
-        <a href="https://twitter.com/mklntf">Twitter</a>
-      </p>
-    </div>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="src/anything.html">Anything</a></li>
+          <li><a href="https://github.com/mklntf" target="_blank">GitHub</a></li>
+          <li><a href="https://twitter.com/mklntf" target="_blank">Twitter</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="row">
+        <div class="col-2-min1200 col-2-min992 col-3-min768 col-12-min600 col-12-max600">
+          <img src="images/me.jpg" alt="a picture of me, overlayed with a pencil effect">
+        </div>
+        <div class="col-10-min1200 col-10-min992 col-9-min768 col-12-min600 col-12-max600">
+          <p>
+            <b>Hi there!</b><br><br>
+            Currently I live in Freilassing, Germany, and work as an Embedded Software Engineer.<br><br>
+            Name: Markus Fuchs<br>
+            Birthday: 08.04.1989<br>
+            Married, three children<br><br>
+            <b>Favorit ...</b><br>
+            <b>Books:</b> Books by Simon Singh and Richard Feynman<br>
+            <b>Movies:</b>  Indiana Jones (1-3), Star Wars (4-6), Matrix, Harry Potter, Lord of the Rings, many more ...<br>
+            <b>Series:</b> The Walking Dead, Sneaky Pete, Game of Thrones, Breaking Bad, Into the Badlands, many more ...<br>
+            <b>Programming Languages:</b> C++, C, Python<br>
+            <b>Operating System:</b> Linux<br>
+            <b>Food:</b> Austrian, Chinese, Italian<br>
+            <b>Games:</b> Warcraft 3, Counter-Strike, LoL, HotS
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12-min1200 col-12-min992 col-12-min768 col-12-min600 col-12-max600">
+          <p>
+            <a href="mailto:mklntf@gmail.com" id="email">Write me an email! (mklntf@gmail.com)</a>
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+    </footer>
   </body>
 </html>
