added lumina desktop

--- a/src/anything.html
+++ b/src/anything.html
@@ -33,6 +33,7 @@
         <ul>
           <li><a href="https://www.archlinux.org/" target="_blank">Arch Linux</a></li>
           <li><a href="https://www.kde.org/" target="_blank">KDE</a></li>
+          <li><a href="https://lumina-desktop.org/" target="_blank">Lumina Desktop</a></li>
           <li><a href="https://www.yoctoproject.org/" target="_blank">The Yocto Project</a></li>
           <li><a href="https://wayland.freedesktop.org/" target="_blank">Wayland</a></li>
           <li><a href="https://www.docker.com/" target="_blank">Docker</a></li>
