--- a/src/anything.html
+++ b/src/anything.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT Open Courseware</a></li>
           <li><a href="https://www.udacity.com/" target="_blank">Udacity</a></li>
+          <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
           <li><a href="https://www.google.com/" target="_blank">Google</a></li>
           <li><a href="https://ripple.com/" target="_blank">Ripple</a></li>
         </ul>
