updated email to new protonmail account

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col-12-min1200 col-12-min992 col-12-min768 col-12-min600 col-12-max600">
           <p>
-            <a href="mailto:mklntf@gmail.com" id="email">Write me an email! (mklntf@gmail.com)</a>
+            <a href="mailto:mklntf@protonmail.com" id="email">Write me an email! (mklntf@protonmail.com)</a>
           </p>
         </div>
       </div>
